# bevy-3d-editor

common/: Cargo.toml
common/src/: lib.rs
editor/: Cargo.toml
editor/assets/: test.ron
editor/src/: camera.rs  const_defs.rs  defs.rs  execute_editor_commands.rs  helper_funcs.rs  initial_setup.rs  input.rs  level.rs  load_file.rs  main.rs  out  outline_material.rs  saving_loading.rs  saving_loading_old
editor/src/ui/: mod.rs  ui_plugin.rs
game/: Cargo.toml
game/src/: camera.rs  defs.rs  events.rs  initial_setup.rs  input.rs  main.rs  movement.rs  sound.rs
